--- a/gtk-3.0/gtk-contained.scss
+++ b/gtk-3.0/gtk-contained.scss
@@ -5,6 +5,7 @@
 // - if you need to inverse a color function use the @if directive to match for dark $variant
 
 $variant: 'light';
+$darker: 'true'; // For a darker headerbar
 
 @import 'colors';
 @import 'drawing';
