--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -33,13 +33,15 @@
 
 $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transparentize(black, 0.98);
 
-@mixin entry($t, $fc:$selected_bg_color, $fs:$selected_bg_color, $edge: none) {
+@mixin entry($t, $fc:$selected_bg_color, $fs:$selected_bg_color, $edge: none, $dc: $dark_bg_color, $dfc: $dark_fg_color) {
 //
 // Entries drawing function
 //
 // $t: entry type
 // $fc: focus color
 // $fs: focus shadow
+// $dc: dark bg
+// $dfc: dark fg
 // $edge: set to none to not draw the bottom edge or specify a color to not
 //        use the default one
 //
@@ -65,6 +67,22 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     background-color: $insensitive_bg_color;
     border-color: transparent;
     box-shadow: none;
+  }
+  @if $t==normal-header {
+    @if($darker=='true' or $variant=='dark') {
+      color: $dfc;
+      background-color: $dark_base_color;
+      @include edges(normal-dark);
+    }
+    @else { @include entry(normal); }
+  }
+  @if $t==insensitive-header {
+    @if($darker=='true' or $variant=='dark') {
+      color: $dfc;
+      background-color: lighten($dark_base_color, 10%);
+      @include edges(disabled);
+    }
+    @else { @include entry(insensitive); }
   }
   @if $t==osd {
     color: $osd_text_color;
@@ -113,7 +131,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   @else { @return darken($c, 20%); }
 }
 
-// Buttons shadows
+// Buttons borders and shadows
 @mixin edges($s: normal, $c:$bg_color) {
   $b: if($c!=$bg_color, _border_color($c), darken($borders_color, 8%));
   $bs1: transparentize(black, 0.78);
@@ -122,6 +140,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   $bsh2: transparentize(black, 0.78);
   $bsa1: transparentize(black, 0.92);
   $bsa2: transparentize(black, 0.96);
+  $bsw: transparentize(white, 0.96);
 
   @if $s == normal {
     box-shadow: 0 1px 2px $bs1, 0 1px 1px $bs2;
@@ -133,10 +152,10 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     border-color: transparent;
   }
   @else if $s == hover {
-    box-shadow: 0 2px 4px $bsh1, 0 2px 2px $bsh2;
+    box-shadow: 0 1px 2px $bsh1, 0 2px 3px $bsh2;
   }
   @else if $s == hover-dark {
-    box-shadow: 0 2px 4px $bsh1, 0 2px 2px $bsh2;
+    box-shadow: 0 1px 2px $bsh1, 0 2px 3px $bsh2, inset 0 0 0 1px $bsw;
   }
   @else if $s == active {
     box-shadow: inset 0 0 0 1px $bsa1, inset 0 2px $bsa2;
@@ -247,42 +266,60 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     > .label { color: inherit; }
   }
 
-  // Header buttons should have the same colors as the dark theme
+  // Header buttons
   @else if $t==headerbutton-normal {
   // normal header button
-    color: $dfc;
-    outline-color: transparentize($tc, 0.7);
-    background-color: lighten($dc, 15%);
-    @include edges(normal-dark);
+    @if($darker=='true' or $variant=='dark') {
+      color: $dfc;
+      outline-color: transparentize($tc, 0.7);
+      background-color: lighten($dc, 15%);
+      @include edges(normal-dark);
+    }
+    @else { @include button(normal); }
   }
   @else if $t==headerbutton-hover {
   // hovered header button
-    color: $dfc;
-    background-color: lighten($dc, 18%);
-    @include edges(hover-dark);
+    @if($darker=='true' or $variant=='dark') {
+      color: $dfc;
+      background-color: lighten($dc, 18%);
+      @include edges(hover-dark);
+    }
+    @else { @include button(hover); }
   }
   @else if $t==headerbutton-active {
   // active header button
-    color: $dfc;
-    background-color: darken($dc, 8%);
-    @include edges(active-dark);
+    @if($darker=='true' or $variant=='dark') {
+      color: $dfc;
+      background-color: darken($dc, 8%);
+      @include edges(active-dark);
+    }
+    @else { @include button(active); }
   }
   @else if $t==headerbutton-hoveractive {
   // active hovered header button
-    color: $dfc;
-    background-color: darken($dc, 12%);
-    @include edges(active-dark);
+    @if($darker=='true' or $variant=='dark') {
+      color: $dfc;
+      background-color: darken($dc, 12%);
+      @include edges(active-dark);
+    }
+    @else { @include button(hoveractive); }
   }
   @else if $t==headerbutton-focus {
   // focus header button
-    color: $dfc;
-    @include edges(focus-dark);
+    @if($darker=='true' or $variant=='dark') {
+      color: $dfc;
+      @include edges(focus-dark);
+    }
+    @else { @include button(focus); }
   }
   @else if $t==headerbutton-disabled {
   // disabled header button
-    background-color: $dc;
-    color: if($tc!=$fg_color, mix($tc, $_bg, 50%), $insensitive_fg_color);
-    @include edges(disabled);
+    @if($darker=='true' or $variant=='dark') {
+      background-color: lighten($dc, 5%);
+      color: if($tc!=$fg_color, mix($tc, $_bg, 50%), $insensitive_fg_color);
+      @include edges(disabled);
+    }
+    @else { @include button(disabled); }
   }
 
   // osd buttons
@@ -402,14 +439,14 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   @else { box-shadow: none; }
 }
 
-@mixin headerbar_fill($c:$bg_color, $hc:transparentize(white, 0.92)) {
+@mixin headerbar_fill($c:$header_bg, $hc:transparentize(white, 0.92)) {
 //
 // headerbar fill
 //
 // $c:  bg color
 // $hc: top highlight color
 //
-  background-color: $dark_bg_color;
+  background-color: $c;
   box-shadow: inset 0 1px $hc; // top highlight
 }
 
