--- a/gtk-3.0/gtk-contained.css
+++ b/gtk-3.0/gtk-contained.css
@@ -178,7 +178,7 @@ notebook > header > tabs > arrow, button.sidebar-button, button.flat { border-co
 
 notebook > header > tabs > arrow.default, button.default { color: #4c4c4c; border-color: #f07746; }
 
-notebook > header > tabs > arrow:hover, button:hover { color: #4c4c4c; background-color: white; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.22); -gtk-icon-effect: highlight; }
+notebook > header > tabs > arrow:hover, button:hover { color: #4c4c4c; background-color: white; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); -gtk-icon-effect: highlight; }
 
 notebook > header > tabs > arrow:focus, button:focus { color: #4c4c4c; border-color: #f07746; }
 
@@ -240,7 +240,7 @@ button.suggested-action { color: white; outline-color: rgba(255, 255, 255, 0.3);
 
 button.suggested-action.flat { border-color: transparent; background-color: transparent; background-image: none; box-shadow: none; box-shadow: inset 0 1px rgba(255, 255, 255, 0), 0 1px rgba(255, 255, 255, 0); text-shadow: none; -gtk-icon-shadow: none; color: #f07746; }
 
-button.suggested-action:hover { color: white; background-color: #f6ab8d; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.22); }
+button.suggested-action:hover { color: white; background-color: #f6ab8d; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
 button.suggested-action:active, button.suggested-action:checked { color: white; outline-color: rgba(255, 255, 255, 0.3); background-color: #ed5b20; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #b2abab; border-bottom-color: #b2abab; border-top-color: #8e8383; }
 
@@ -266,7 +266,7 @@ button.destructive-action { color: white; outline-color: rgba(255, 255, 255, 0.3
 
 button.destructive-action.flat { border-color: transparent; background-color: transparent; background-image: none; box-shadow: none; box-shadow: inset 0 1px rgba(255, 255, 255, 0), 0 1px rgba(255, 255, 255, 0); text-shadow: none; -gtk-icon-shadow: none; color: #ef5350; }
 
-button.destructive-action:hover { color: white; background-color: #f59896; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.22); }
+button.destructive-action:hover { color: white; background-color: #f59896; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
 button.destructive-action:active, button.destructive-action:checked { color: white; outline-color: rgba(255, 255, 255, 0.3); background-color: #ec2e2b; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #b2abab; border-bottom-color: #b2abab; border-top-color: #8e8383; }
 
@@ -320,7 +320,7 @@ button.circular label { padding: 0; }
 
 .inline-toolbar toolbutton > button { color: #4c4c4c; outline-color: rgba(76, 76, 76, 0.3); background-color: white; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.22), 0 1px 1px rgba(0, 0, 0, 0.06); border-color: #b2abab; border-bottom-color: #8e8383; }
 
-.inline-toolbar toolbutton > button:hover { color: #4c4c4c; background-color: white; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.22); }
+.inline-toolbar toolbutton > button:hover { color: #4c4c4c; background-color: white; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
 .inline-toolbar toolbutton > button:active, .inline-toolbar toolbutton > button:checked { color: #4c4c4c; outline-color: rgba(76, 76, 76, 0.3); background-color: #d7d3d3; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #b2abab; border-bottom-color: #b2abab; border-top-color: #8e8383; }
 
@@ -492,7 +492,7 @@ searchbar > revealer > box { margin: -6px; padding: 6px; }
 
 .titlebar:not(headerbar) .subtitle, headerbar .subtitle { font-size: smaller; padding-left: 12px; padding-right: 12px; }
 
-.selection-mode.titlebar:not(headerbar), headerbar.selection-mode { color: #ffffff; text-shadow: 0 -1px rgba(0, 0, 0, 0.5); border-color: #c04310; background-color: #363636; box-shadow: inset 0 1px #f8bba3; }
+.selection-mode.titlebar:not(headerbar), headerbar.selection-mode { color: #ffffff; text-shadow: 0 -1px rgba(0, 0, 0, 0.5); border-color: #c04310; background-color: #f07746; box-shadow: inset 0 1px #f8bba3; }
 
 .selection-mode.titlebar:backdrop:not(headerbar), headerbar.selection-mode:backdrop { background-color: #f07746; background-image: none; box-shadow: inset 0 1px #f9c9b5; }
 
@@ -500,7 +500,7 @@ searchbar > revealer > box { margin: -6px; padding: 6px; }
 
 .selection-mode.titlebar:not(headerbar) button.flat, headerbar.selection-mode button.flat { border-color: transparent; background-color: transparent; background-image: none; box-shadow: none; box-shadow: inset 0 1px rgba(255, 255, 255, 0), 0 1px rgba(255, 255, 255, 0); text-shadow: none; -gtk-icon-shadow: none; }
 
-.selection-mode.titlebar:not(headerbar) button:hover, headerbar.selection-mode button:hover { color: #ffffff; background-color: #f6ab8d; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.22); }
+.selection-mode.titlebar:not(headerbar) button:hover, headerbar.selection-mode button:hover { color: #ffffff; background-color: #f6ab8d; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
 .selection-mode.titlebar:not(headerbar) button:active, .selection-mode.titlebar:not(headerbar) button:checked, headerbar.selection-mode button:active, headerbar.selection-mode button:checked { color: #ffffff; outline-color: rgba(255, 255, 255, 0.3); background-color: #ed5b20; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #b2abab; border-bottom-color: #b2abab; border-top-color: #8e8383; }
 
@@ -516,7 +516,7 @@ searchbar > revealer > box { margin: -6px; padding: 6px; }
 
 .selection-mode.titlebar:not(headerbar) button.suggested-action, headerbar.selection-mode button.suggested-action { color: #4c4c4c; outline-color: rgba(76, 76, 76, 0.3); background-color: white; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.22), 0 1px 1px rgba(0, 0, 0, 0.06); border-color: #b2abab; border-bottom-color: #8e8383; border-color: #c04310; }
 
-.selection-mode.titlebar:not(headerbar) button.suggested-action:hover, headerbar.selection-mode button.suggested-action:hover { color: #4c4c4c; background-color: white; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.22); border-color: #c04310; }
+.selection-mode.titlebar:not(headerbar) button.suggested-action:hover, headerbar.selection-mode button.suggested-action:hover { color: #4c4c4c; background-color: white; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); border-color: #c04310; }
 
 .selection-mode.titlebar:not(headerbar) button.suggested-action:active, headerbar.selection-mode button.suggested-action:active { color: #4c4c4c; outline-color: rgba(76, 76, 76, 0.3); background-color: #d7d3d3; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #b2abab; border-bottom-color: #b2abab; border-top-color: #8e8383; border-color: #c04310; }
 
@@ -542,9 +542,9 @@ searchbar > revealer > box { margin: -6px; padding: 6px; }
 
 headerbar { color: #f2f1f0; }
 
-headerbar button { color: #f2f1f0; border-width: 0; color: #f2f1f0; outline-color: rgba(76, 76, 76, 0.3); background-color: #5c5c5c; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.22), 0 1px 1px rgba(0, 0, 0, 0.06); border-color: transparent; }
+headerbar button { color: #f2f1f0; border-width: 0; border-radius: 2px; color: #f2f1f0; outline-color: rgba(76, 76, 76, 0.3); background-color: #5c5c5c; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.22), 0 1px 1px rgba(0, 0, 0, 0.06); border-color: transparent; }
 
-headerbar button:hover { color: #f2f1f0; background-color: #646464; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.22); }
+headerbar button:hover { color: #f2f1f0; background-color: #646464; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22), inset 0 0 0 1px rgba(255, 255, 255, 0.04); }
 
 headerbar button:focus { color: #f2f1f0; border-color: #f07746; }
 
@@ -552,9 +552,15 @@ headerbar button:checked, headerbar button:active { color: #f2f1f0; background-c
 
 headerbar button:checked:hover, headerbar button:active:hover { color: #f2f1f0; background-color: #171717; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04), inset 0 -3px #f07746; border-color: transparent; }
 
-headerbar button:disabled { background-color: #363636; color: #9b9a9a; box-shadow: none; border-color: transparent; }
+headerbar button:disabled { background-color: #434343; color: #9b9a9a; box-shadow: none; border-color: transparent; }
 
 headerbar button:backdrop { color: #9b9a9a; }
+
+headerbar entry { color: #f2f1f0; background-color: #111; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.22), 0 1px 1px rgba(0, 0, 0, 0.06); border-color: transparent; }
+
+headerbar entry:focus { border-color: #f07746; }
+
+headerbar entry:disabled { color: #f2f1f0; background-color: #2b2b2b; box-shadow: none; border-color: transparent; }
 
 headerbar .suggested-action:disabled { border-color: transparent; background-color: transparent; background-image: none; box-shadow: none; box-shadow: inset 0 1px rgba(255, 255, 255, 0), 0 1px rgba(255, 255, 255, 0); text-shadow: none; -gtk-icon-shadow: none; color: #9b9a9a; }
 
@@ -903,7 +909,7 @@ switch:disabled { color: #9b9a9a; border-color: #c5c0c0; background-color: #dad8
 
 switch slider { margin: -1px; min-width: 36px; min-height: 20px; border: 1px solid; border-radius: 99px; color: #4c4c4c; outline-color: rgba(76, 76, 76, 0.3); background-color: white; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.22), 0 1px 1px rgba(0, 0, 0, 0.06); border-color: #b2abab; border-bottom-color: #8e8383; }
 
-switch:hover slider { color: #4c4c4c; background-color: white; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.22); }
+switch:hover slider { color: #4c4c4c; background-color: white; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
 switch:checked slider { border: 1px solid #c04310; }
 
@@ -1027,7 +1033,7 @@ scale fill:disabled { border-color: transparent; background-color: transparent; 
 
 scale slider { color: #4c4c4c; outline-color: rgba(76, 76, 76, 0.3); background-color: white; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.22), 0 1px 1px rgba(0, 0, 0, 0.06); border-color: #b2abab; border-bottom-color: #8e8383; border: 1px solid #ada5a5; border-radius: 100%; box-shadow: none; }
 
-scale slider:hover { color: #4c4c4c; background-color: white; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.22); }
+scale slider:hover { color: #4c4c4c; background-color: white; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
 scale slider:active { border-color: #c04310; }
 
@@ -1368,7 +1374,7 @@ infobar.info:backdrop, infobar.question:backdrop, infobar.warning:backdrop, info
 
 infobar.info button, infobar.question button, infobar.warning button, infobar.error button { color: #ffffff; outline-color: rgba(255, 255, 255, 0.3); background-color: #f49a75; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.22), 0 1px 1px rgba(0, 0, 0, 0.06); border-color: #b2abab; border-bottom-color: #8e8383; }
 
-infobar.info button:hover, infobar.question button:hover, infobar.warning button:hover, infobar.error button:hover { color: #ffffff; background-color: #f8bca4; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.22); }
+infobar.info button:hover, infobar.question button:hover, infobar.warning button:hover, infobar.error button:hover { color: #ffffff; background-color: #f8bca4; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
 infobar.info button:active, infobar.info button:checked, infobar.question button:active, infobar.question button:checked, infobar.warning button:active, infobar.warning button:checked, infobar.error button:active, infobar.error button:checked { color: #ffffff; outline-color: rgba(255, 255, 255, 0.3); background-color: #ed5b20; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #b2abab; border-bottom-color: #b2abab; border-top-color: #8e8383; }
 
@@ -1430,7 +1436,7 @@ colorswatch#add-color-button:only-child { border-radius: 0; }
 
 colorswatch#add-color-button overlay { color: #4c4c4c; outline-color: rgba(76, 76, 76, 0.3); background-color: white; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.22), 0 1px 1px rgba(0, 0, 0, 0.06); border-color: #b2abab; border-bottom-color: #8e8383; }
 
-colorswatch#add-color-button overlay:hover { color: #4c4c4c; background-color: white; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.22); }
+colorswatch#add-color-button overlay:hover { color: #4c4c4c; background-color: white; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
 colorswatch:disabled { opacity: 0.5; }
 
@@ -1661,7 +1667,7 @@ XfceHeading, .XfceHeading { margin: 0; padding: 0; border-width: 0; background-i
 
 .xfce4-panel menu button { color: #4c4c4c; outline-color: rgba(76, 76, 76, 0.3); background-color: white; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.22), 0 1px 1px rgba(0, 0, 0, 0.06); border-color: #b2abab; border-bottom-color: #8e8383; }
 
-.xfce4-panel menu button:hover { color: #4c4c4c; background-color: white; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.22); }
+.xfce4-panel menu button:hover { color: #4c4c4c; background-color: white; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22); }
 
 .xfce4-panel menu button:active, .xfce4-panel menu button:checked { color: #4c4c4c; outline-color: rgba(76, 76, 76, 0.3); background-color: #d7d3d3; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #b2abab; border-bottom-color: #b2abab; border-top-color: #8e8383; }
 
