--- a/gnome-shell/gnome-shell-high-contrast.css
+++ b/gnome-shell/gnome-shell-high-contrast.css
@@ -96,7 +96,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 .flashspot { background-color: white; }
 
-.modal-dialog, .popup-menu-boxpointer, .candidate-popup-boxpointer { border-radius: 0; color: #eeeeec; background-color: #000; border: none; box-shadow: 0 2px 2px rgba(0, 0, 0, 0.6); }
+.modal-dialog, .popup-menu-boxpointer, .candidate-popup-boxpointer { border-radius: 2px; color: #eeeeec; background-color: #000; border: none; box-shadow: 0 2px 2px rgba(0, 0, 0, 0.6); }
 
 .modal-dialog .modal-dialog-content-box { padding: 24px; }
 
@@ -368,9 +368,9 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #panel .panel-button .app-menu-icon { width: 0; height: 0; }
 
-#panel .panel-button:hover { color: #fff; background-color: rgba(255, 255, 255, 0.1); }
+#panel .panel-button:hover { color: #fff; background-color: rgba(0, 0, 0, 0.01); box-shadow: inset 0 -2px 0px rgba(255, 255, 255, 0.6); }
 
-#panel .panel-button:active, #panel .panel-button:overview, #panel .panel-button:focus, #panel .panel-button:checked { background-color: #215d9c; box-shadow: none; color: #ffffff; }
+#panel .panel-button:active, #panel .panel-button:overview, #panel .panel-button:focus, #panel .panel-button:checked { background-color: rgba(0, 0, 0, 0.01); box-shadow: inset 0 -2px 0px #215d9c; color: #ffffff; }
 
 #panel .panel-button:active > .system-status-icon, #panel .panel-button:overview > .system-status-icon, #panel .panel-button:focus > .system-status-icon, #panel .panel-button:checked > .system-status-icon { icon-shadow: black 0 2px 2px; }
 
@@ -438,7 +438,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 .calendar-change-month-forward:rtl { background-image: url("calendar-arrow-left.svg"); }
 
-.calendar-day-base { font-size: 80%; text-align: center; width: 2.4em; height: 2.4em; padding: 0.1em; margin: 2px; border-radius: 0; }
+.calendar-day-base { font-size: 80%; text-align: center; width: 2.4em; height: 2.4em; padding: 0.1em; margin: 2px; border-radius: 2px; }
 
 .calendar-day-base:hover, .calendar-day-base:focus { background-color: #0d0d0d; }
 
