--- a/gnome-shell/gnome-shell-sass/_common.scss
+++ b/gnome-shell/gnome-shell-sass/_common.scss
@@ -182,7 +182,7 @@ StScrollBar {
 .flashspot { background-color: white; }
 
 %modal {
-  border-radius: 0;
+  border-radius: 2px;
   color: $osd_fg_color;
   background-color: $bg_color;
   border: none;
@@ -777,14 +777,14 @@ StScrollBar {
 
     &:hover {
       color: $fg_color;
-      background-color: transparentize(white, 0.9);
+      background-color: rgba(0, 0, 0, 0.01);
+      box-shadow: inset 0 -2px 0px transparentize(white, 0.4);
     }
 
     &:active, &:overview, &:focus, &:checked {
-      // Trick due to St limitations. It needs a background to draw
-      // a box-shadow
-      background-color: $selected_bg_color;
-      box-shadow: none;
+      // Trick due to St limitations. It needs a background to draw a box-shadow
+      background-color: rgba(0, 0, 0, 0.01);
+      box-shadow: inset 0 -2px 0px $selected_bg_color;
       color: $selected_fg_color;
 
       & > .system-status-icon { icon-shadow: black 0 2px 2px; }
@@ -921,7 +921,7 @@ StScrollBar {
       width: 2.4em; height: 2.4em;
       padding: 0.1em;
       margin: 2px;
-      border-radius: 0;
+      border-radius: 2px;
       &:hover,&:focus { background-color: lighten($bg_color, 5%); }
       &:active,&:selected {
         color: lighten($selected_fg_color, 5%);
