--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -169,6 +169,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   }
   @else if $s == focus {
     border-color: $selected_bg_color;
+    box-shadow: 0 1px 2px $bsh1, 0 2px 3px $bsh2, 0 0 0 1px transparentize($selected_bg_color, 0.7), 0 0 0 2px transparentize($selected_bg_color, 0.9);
   }
   @else if $s == focus-dark {
     border-color: $selected_bg_color;
