--- a/gtk-3.0/_common.scss
+++ b/gtk-3.0/_common.scss
@@ -801,20 +801,49 @@ toolbar.inline-toolbar toolbutton {
   border-left-style: none;
 }
 
+%linked_left {
+  border-top-left-radius: $br_b;
+  border-bottom-left-radius: $br_b;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-right-style: none;
+  border-left-style: solid;
+}
+
+%linked_right {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border-top-right-radius: $br_b;
+  border-bottom-right-radius: $br_b;
+  border-right-style: solid;
+}
+
+
+// .linked assumes Box, which reverses nodes in RTL, so 1st child is always left
 %linked {
   @extend %linked_middle;
 
-  &:first-child {
-    border-top-left-radius: $br_b;
-    border-bottom-left-radius: $br_b;
-    border-right-style: none;
-    border-left-style: solid;
+  &:first-child { @extend %linked_left; }
+  &:last-child { @extend %linked_right; }
+
+  &:only-child {
+    border-radius: $br_b;
+    border-style: solid;
+  }
+}
+
+// Other widgets use widget child order, so 1st/last child are at text start/end
+%linked_flippable {
+  @extend %linked_middle;
+
+  &:dir(ltr) {
+    &:first-child { @extend %linked_left; }
+    &:last-child { @extend %linked_right; }
   }
 
-  &:last-child {
-    border-top-right-radius: $br_b;
-    border-bottom-right-radius: $br_b;
-    border-right-style: solid;
+  &:dir(rtl) {
+    &:first-child { @extend %linked_right; }
+    &:last-child { @extend %linked_left; }
   }
 
   &:only-child {
@@ -1519,6 +1548,13 @@ headerbar { // headerbar border rounding
 /************
  * Pathbars *
  ************/
+
+// GtkPathBar does not work with just .linked, so we must override that. But we
+// can’t simply remove .linked from the widget as that might break other themes.
+// Note also we select on filechooser to avoid interfering with NautilusPathBar.
+filechooser .path-bar.linked > button {
+  @extend %linked_flippable;
+}
 
 .path-bar button {
   &.text-button, &.image-button, & {
