--- a/gnome-shell/gnome-shell-sass/_common.scss
+++ b/gnome-shell/gnome-shell-sass/_common.scss
@@ -732,7 +732,6 @@ StScrollBar {
 /* TOP BAR */
 
 #panel {
-  //background-color: darken($bg_color, 5%); // slightly darkened to make it work better with maximized windows
   background-color: transparentize(black, 0.2);
   font-weight: bold;
   height: 1.86em;
@@ -771,8 +770,10 @@ StScrollBar {
     color: $fg_color;
 
     .app-menu-icon {
-      width: 0;
-      height: 0;
+      -st-icon-style: symbolic;
+      margin-left: 4px;
+      margin-right: 4px;
+      //dimensions of the icon are hardcoded
     }
 
     &:hover {
@@ -1103,8 +1104,7 @@ StScrollBar {
   #appMenu {
     spinner-image: url("process-working.svg");
     spacing: 4px;
-    padding-right: 8px;
-
+    
     .label-shadow { color: transparent; }
   }
 
