--- a/gnome-shell/gnome-shell-high-contrast.css
+++ b/gnome-shell/gnome-shell-high-contrast.css
@@ -600,7 +600,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 .window-caption { spacing: 25px; color: #ffffff; background-color: #215d9c; border-radius: 0; padding: 4px 12px; }
 
-.search-entry { width: 320px; padding: 7px 9px; border-radius: 0; border-color: transparent; color: #eeeeec; background-color: white; box-shadow: none; background-color: rgba(255, 255, 255, 0.2); border-color: rgba(255, 255, 255, 0.4); box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.2); }
+.search-entry { width: 320px; padding: 7px 9px; border-radius: 66px; border-color: transparent; color: #eeeeec; background-color: white; box-shadow: none; background-color: rgba(255, 255, 255, 0.2); border-color: rgba(255, 255, 255, 0.4); box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.2); }
 
 .search-entry:hover { box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.3); }
 
