--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -397,17 +397,17 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   @if $t==normal {
     color: $tc;
     background-color: $base_color;
-    border: 2px solid $borders_color;
+    border: 1px solid $borders_color;
     box-shadow: none;
   }
   @else if $t==hover {
     color: $tc;
-    border: 2px solid $selected_bg_color;
+    border: 1px solid $selected_bg_color;
   }
   @else if $t==checked {
     color: $selected_fg_color;
     background-color: $selected_bg_color;
-    border: 2px solid $selected_borders_color;
+    border: 1px solid $selected_borders_color;
   }
   @else if $t==insensitive {
     $_bg: if($c!=$bg_color, mix($c, $base_color, 85%), $insensitive_bg_color);
@@ -592,32 +592,44 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
 
   @each $po in (top), (right), (bottom), (left) {
     @if $po == top {
+      padding-top: 1px;
       $th: inset 0 -1px $borders_color,
                 inset 0 2px $sa,
                 inset 0 1px $sb;
       $bh: inset 0 -3px $borders_color;
-      $ba: inset 0 -3px $selected_bg_color;
+      $ba: inset 0 1px $borders_color,
+           inset 1px 0 $borders_color,
+           inset -1px 0 $borders_color;
     }
     @else if $po == left {
+      padding-left: 1px;
       $th: inset -1px 0 $borders_color,
                 inset 2px 0 $sa,
                 inset 1px 0 $sb;
       $bh: inset -3px 0 $borders_color;
-      $ba: inset -3px 0 $selected_bg_color;
+      $ba: inset 0 1px $borders_color,
+           inset 0 -1px $borders_color,
+           inset 1px 0 $borders_color;
     }
     @else if $po == right {
+      padding-right: 1px;
       $th: inset 1px 0 $borders_color,
                 inset -2px 0 $sa,
                 inset -1px 0 $sb;
       $bh: inset 3px 0 $borders_color;
-      $ba: inset 3px 0 $selected_bg_color;
+      $ba: inset 0 1px $borders_color,
+           inset 0 -1px $borders_color,
+           inset -1px 0 $borders_color;
     }
     @else if $po == bottom {
+      padding-bottom: 1px;
       $th: inset 0 1px $borders_color,
                 inset 0 -2px $sa,
                 inset 0 -1px $sb;
       $bh: inset 0 3px $borders_color;
-      $ba: inset 0 3px $selected_bg_color;
+      $ba: inset 0 -1px $borders_color,
+           inset 1px 0 $borders_color,
+           inset -1px 0 $borders_color;
     }
 
     &.#{$po} {
@@ -629,7 +641,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
         > tab {
           &:hover { box-shadow: $bh; }
           &:checked, &:checked:hover {
-            background-color: $bg_color;
+            background-color: $base_color;
             border-width: 0;
             box-shadow: $ba;
           }
