--- a/gtk-3.0/gtk-contained.css
+++ b/gtk-3.0/gtk-contained.css
@@ -669,13 +669,13 @@ menubar > menuitem:hover, menubar > menuitem:active, .menubar > menuitem:hover, 
 
 menubar > menuitem:disabled, .menubar > menuitem:disabled { color: #9b9a9a; box-shadow: none; }
 
-menu, .menu, .context-menu { margin: 4px; padding: 2px 0px; background-color: #363636; border: 1px solid #c5c0c0; }
+menu, .menu, .context-menu { margin: 4px; padding: 2px 0px; background-color: #FFFFFF; border: 1px solid #c5c0c0; }
 
 .csd menu, .csd .menu, .csd .context-menu { border: none; }
 
 menu:backdrop, .menu:backdrop, .context-menu:backdrop { background-color: #FFFFFF; }
 
-menu menuitem, .menu menuitem, .context-menu menuitem { min-height: 16px; min-width: 40px; padding: 4px 6px; text-shadow: none; color: #ffffff; }
+menu menuitem, .menu menuitem, .context-menu menuitem { min-height: 16px; min-width: 40px; padding: 4px 6px; text-shadow: none; color: #4c4c4c; }
 
 menu menuitem:hover, .menu menuitem:hover, .context-menu menuitem:hover { color: #ffffff; background-color: #f07746; }
 
@@ -725,13 +725,13 @@ popover.background list separator { margin: 0px; }
 /***************** Notebooks and * Tabs          * */
 notebook { padding: 0; }
 
-notebook > header { padding: 0; border-color: #c5c0c0; border-width: 0; background-color: #dedbdb; }
+notebook > header { padding: 0; border-color: #c5c0c0; border-width: 0; background-color: #dedbdb; padding-top: 1px; padding-right: 1px; padding-bottom: 1px; padding-left: 1px; }
 
 notebook > header.top { box-shadow: inset 0 -1px #c5c0c0, inset 0 2px rgba(0, 0, 0, 0.02), inset 0 1px rgba(0, 0, 0, 0.04); }
 
 notebook > header.top > tabs > tab:hover { box-shadow: inset 0 -3px #c5c0c0; }
 
-notebook > header.top > tabs > tab:checked, notebook > header.top > tabs > tab:checked:hover { background-color: #eae8e8; border-width: 0; box-shadow: inset 0 -3px #f07746; }
+notebook > header.top > tabs > tab:checked, notebook > header.top > tabs > tab:checked:hover { background-color: #FFFFFF; border-width: 0; box-shadow: inset 0 1px #c5c0c0, inset 1px 0 #c5c0c0, inset -1px 0 #c5c0c0; }
 
 notebook > header.top > tabs > arrow { border-style: none; }
 
@@ -741,7 +741,7 @@ notebook > header.right { box-shadow: inset 1px 0 #c5c0c0, inset -2px 0 rgba(0, 
 
 notebook > header.right > tabs > tab:hover { box-shadow: inset 3px 0 #c5c0c0; }
 
-notebook > header.right > tabs > tab:checked, notebook > header.right > tabs > tab:checked:hover { background-color: #eae8e8; border-width: 0; box-shadow: inset 3px 0 #f07746; }
+notebook > header.right > tabs > tab:checked, notebook > header.right > tabs > tab:checked:hover { background-color: #FFFFFF; border-width: 0; box-shadow: inset 0 1px #c5c0c0, inset 0 -1px #c5c0c0, inset -1px 0 #c5c0c0; }
 
 notebook > header.right > tabs > arrow { border-style: none; }
 
@@ -751,7 +751,7 @@ notebook > header.bottom { box-shadow: inset 0 1px #c5c0c0, inset 0 -2px rgba(0,
 
 notebook > header.bottom > tabs > tab:hover { box-shadow: inset 0 3px #c5c0c0; }
 
-notebook > header.bottom > tabs > tab:checked, notebook > header.bottom > tabs > tab:checked:hover { background-color: #eae8e8; border-width: 0; box-shadow: inset 0 3px #f07746; }
+notebook > header.bottom > tabs > tab:checked, notebook > header.bottom > tabs > tab:checked:hover { background-color: #FFFFFF; border-width: 0; box-shadow: inset 0 -1px #c5c0c0, inset 1px 0 #c5c0c0, inset -1px 0 #c5c0c0; }
 
 notebook > header.bottom > tabs > arrow { border-style: none; }
 
@@ -761,13 +761,13 @@ notebook > header.left { box-shadow: inset -1px 0 #c5c0c0, inset 2px 0 rgba(0, 0
 
 notebook > header.left > tabs > tab:hover { box-shadow: inset -3px 0 #c5c0c0; }
 
-notebook > header.left > tabs > tab:checked, notebook > header.left > tabs > tab:checked:hover { background-color: #eae8e8; border-width: 0; box-shadow: inset -3px 0 #f07746; }
+notebook > header.left > tabs > tab:checked, notebook > header.left > tabs > tab:checked:hover { background-color: #FFFFFF; border-width: 0; box-shadow: inset 0 1px #c5c0c0, inset 0 -1px #c5c0c0, inset 1px 0 #c5c0c0; }
 
 notebook > header.left > tabs > arrow { border-style: none; }
 
 notebook > header.left { padding-top: 0; padding-bottom: 0; }
 
-notebook > header tabs { margin: 0px; }
+notebook > header tabs { margin: -1px; }
 
 notebook > header.top > tabs > arrow, notebook > header.bottom > tabs > arrow { margin-left: -5px; margin-right: -5px; padding-left: 4px; padding-right: 4px; }
 
@@ -940,17 +940,17 @@ checkbutton.text-button label:not(:only-child):first-child, radiobutton.text-but
 
 checkbutton.text-button label:not(:only-child):last-child, radiobutton.text-button label:not(:only-child):last-child { margin-right: 4px; }
 
-check, radio { margin: 0 4px; min-height: 14px; min-width: 14px; border: 0px solid; -gtk-icon-source: none; color: #4c4c4c; background-color: #FFFFFF; border: 2px solid #c5c0c0; box-shadow: none; }
+check, radio { margin: 0 4px; min-height: 14px; min-width: 14px; border: 1px solid; -gtk-icon-source: none; color: #4c4c4c; background-color: #FFFFFF; border: 1px solid #c5c0c0; box-shadow: none; }
 
 check:only-child, radio:only-child { margin: 0; }
 
-check:hover, radio:hover { color: #4c4c4c; border: 2px solid #f07746; }
+check:hover, radio:hover { color: #4c4c4c; border: 1px solid #f07746; }
 
-check:active, radio:active { color: #ffffff; background-color: #f07746; border: 2px solid #c04310; }
+check:active, radio:active { color: #ffffff; background-color: #f07746; border: 1px solid #c04310; }
 
-check:checked, radio:checked { color: #ffffff; background-color: #f07746; border: 2px solid #c04310; }
+check:checked, radio:checked { color: #ffffff; background-color: #f07746; border: 1px solid #c04310; }
 
-check:checked:hover, radio:checked:hover { color: #ffffff; background-color: #f07746; border: 2px solid #c04310; }
+check:checked:hover, radio:checked:hover { color: #ffffff; background-color: #f07746; border: 1px solid #c04310; }
 
 check:disabled, radio:disabled { color: #9b9a9a; border-color: #a8a0a0; background-color: #dad8d8; }
 
@@ -968,7 +968,7 @@ menu menuitem check, menu menuitem radio { margin: 0; border: 1px solid; box-sha
 
 menu menuitem check, menu menuitem check:hover, menu menuitem check:disabled, menu menuitem check:checked, menu menuitem radio, menu menuitem radio:hover, menu menuitem radio:disabled, menu menuitem radio:checked { min-height: 14px; min-width: 14px; background-image: none; background-color: transparent; box-shadow: none; -gtk-icon-shadow: none; color: inherit; border-color: #c5c0c0; }
 
-check { border-radius: 3px; }
+check { border-radius: 1px; }
 
 check:checked { -gtk-icon-source: image(-gtk-recolor(url("assets/check-symbolic.svg")), -gtk-recolor(url("assets/check-symbolic.symbolic.png"))); }
 
