--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -173,6 +173,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   }
   @else if $s == focus-dark {
     border-color: $selected_bg_color;
+    box-shadow: none;
   }
   @else if $s == disabled {
     box-shadow: none;
@@ -309,6 +310,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   // focus header button
     @if($darker=='true' or $variant=='dark') {
       color: $dfc;
+      background-color: $selected_bg_color;
       @include edges(focus-dark);
     }
     @else { @include button(focus); }
