--- a/gtk-3.0/_colors.scss
+++ b/gtk-3.0/_colors.scss
@@ -2,18 +2,18 @@
 // it gets @if ed depending on $variant
 
 // When we want to use the dark colors in the light theme
-$dark_bg_color: #363636;
+$dark_bg_color: #4d4d4d; //#363636;
 $dark_fg_color: #f2f1f0;
 $dark_borders_color: darken($dark_bg_color,15%);
 $dark_base_color: #111;
 
 $base_color: if($variant == 'light', #FFFFFF, $dark_base_color);
 $text_color: if($variant == 'light', #3C3C3C, white);
-$bg_color: if($variant == 'light', #eae8e8, $dark_bg_color);
+$bg_color: if($variant == 'light', #e3dedb, $dark_bg_color); //#eae8e8
 $fg_color: if($variant == 'light', #4c4c4c, $dark_fg_color);
 
 $selected_fg_color: #ffffff;
-$selected_bg_color: if($variant == 'light', #f07746, darken(#f07746, 20%));
+$selected_bg_color: #fb6155; //#f07746
 $selected_borders_color: darken($selected_bg_color, 20%);
 $borders_color: if($variant == 'light', darken($bg_color,15%), $dark_borders_color);
 $borders_edge: if($variant == 'light', white, transparentize($fg_color, 0.9));
