--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -442,7 +442,25 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   @else { box-shadow: none; }
 }
 
-@mixin headerbar_fill($c:$header_bg, $hc:transparentize(white, 0.92)) {
+@mixin headerbar_fill($c:$header_bg, $hc:transparentize(white, 0.92), $bs1:transparentize(black, 0.8), $bs2:transparentize(black, 0.94), $bo:transparentize(black, 0.85)) {
+//
+// headerbar fill
+//
+// $c:  bg color
+// $hc: top highlight color
+// $bs1: bottom inner shadow 1
+// $bs2: bottom inner shadow 2
+// $bo: bottom outer shadow
+//
+  background-color: $c;
+  box-shadow: 
+    inset 0 1px $hc,
+    inset 0 -1px $bs1,
+    inset 0 -2px $bs2,
+    0 1px $bo;
+}
+
+@mixin ssd_fill($c:$header_bg, $hc:transparentize(white, 0.92)) {
 //
 // headerbar fill
 //
@@ -450,7 +468,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
 // $hc: top highlight color
 //
   background-color: $c;
-  box-shadow: inset 0 1px $hc; // top highlight
+  box-shadow: inset 0 1px $hc;
 }
 
 @mixin overshoot($p, $t:normal, $c:$fg_color) {
