--- a/gnome-shell/gnome-shell-high-contrast.css
+++ b/gnome-shell/gnome-shell-high-contrast.css
@@ -352,7 +352,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 .tile-preview-left.tile-preview-right.on-primary { border-radius: 0px 0px 0 0; }
 
 /* TOP BAR */
-#panel { background-color: rgba(0, 0, 0, 0.8); font-weight: bold; height: 1.86em; box-shadow: 0 1px rgba(255, 255, 255, 0.1); border-width: 0px; }
+#panel { background-color: rgba(0, 0, 0, 0.8); font-weight: bold; height: 1.86em; border-width: 0px; }
 
 #panel.unlock-screen, #panel.login-screen, #panel.lock-screen { background-color: transparent; }
 
@@ -1038,13 +1038,9 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer { background-color: rgba(0, 0, 0, 0.5); border-radius: 0; }
 
-#dashtodockContainer.left.extended { border-color: rgba(255, 255, 255, 0.1); border-style: solid; border-right-width: 1px; box-shadow: inset 3px 0 rgba(0, 0, 0, 0.4); }
+#dashtodockContainer.left.extended { box-shadow: inset 3px 0 rgba(0, 0, 0, 0.4); }
 
 #dashtodockContainer.shrink #dash, #dashtodockContainer.dashtodock #dash { border: none !important; padding: 0px; }
-
-#dashtodockContainer.shrink #dash.left #dash, #dashtodockContainer.dashtodock #dash.left #dash { padding-top: 2px; }
-
-#dashtodockContainer.shrink #dash.right #dash, #dashtodockContainer.dashtodock #dash.right #dash { padding-top: 2px; }
 
 #dashtodockContainer.extended { border: 0; border-radius: 0; }
 
@@ -1066,13 +1062,9 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer { background-color: rgba(0, 0, 0, 0.5); border-radius: 0; }
 
-#dashtodockContainer.right.extended { border-color: rgba(255, 255, 255, 0.1); border-style: solid; border-left-width: 1px; box-shadow: inset -3px 0 rgba(0, 0, 0, 0.4); }
+#dashtodockContainer.right.extended { box-shadow: inset -3px 0 rgba(0, 0, 0, 0.4); }
 
 #dashtodockContainer.shrink #dash, #dashtodockContainer.dashtodock #dash { border: none !important; padding: 0px; }
-
-#dashtodockContainer.shrink #dash.left #dash, #dashtodockContainer.dashtodock #dash.left #dash { padding-top: 2px; }
-
-#dashtodockContainer.shrink #dash.right #dash, #dashtodockContainer.dashtodock #dash.right #dash { padding-top: 2px; }
 
 #dashtodockContainer.extended { border: 0; border-radius: 0; }
 
@@ -1094,13 +1086,9 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer { background-color: rgba(0, 0, 0, 0.5); border-radius: 0; }
 
-#dashtodockContainer.bottom.extended { border-color: rgba(255, 255, 255, 0.1); border-style: solid; border-top-width: 1px; box-shadow: inset 0 -3px rgba(0, 0, 0, 0.4); }
+#dashtodockContainer.bottom.extended { box-shadow: inset 0 -3px rgba(0, 0, 0, 0.4); }
 
 #dashtodockContainer.shrink #dash, #dashtodockContainer.dashtodock #dash { border: none !important; padding: 0px; }
-
-#dashtodockContainer.shrink #dash.left #dash, #dashtodockContainer.dashtodock #dash.left #dash { padding-top: 2px; }
-
-#dashtodockContainer.shrink #dash.right #dash, #dashtodockContainer.dashtodock #dash.right #dash { padding-top: 2px; }
 
 #dashtodockContainer.extended { border: 0; border-radius: 0; }
 
@@ -1122,13 +1110,9 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer { background-color: rgba(0, 0, 0, 0.5); border-radius: 0; }
 
-#dashtodockContainer.top.extended { border-color: rgba(255, 255, 255, 0.1); border-style: solid; border-bottom-width: 1px; box-shadow: inset 0 3px rgba(0, 0, 0, 0.4); }
+#dashtodockContainer.top.extended { box-shadow: inset 0 3px rgba(0, 0, 0, 0.4); }
 
 #dashtodockContainer.shrink #dash, #dashtodockContainer.dashtodock #dash { border: none !important; padding: 0px; }
-
-#dashtodockContainer.shrink #dash.left #dash, #dashtodockContainer.dashtodock #dash.left #dash { padding-top: 2px; }
-
-#dashtodockContainer.shrink #dash.right #dash, #dashtodockContainer.dashtodock #dash.right #dash { padding-top: 2px; }
 
 #dashtodockContainer.extended { border: 0; border-radius: 0; }
 
