--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -409,7 +409,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   @else if $t==checked {
     color: $selected_fg_color;
     background-color: $selected_bg_color;
-    border: 1px solid $selected_borders_color;
+    border: 1px solid $selected_bg_color;
   }
   @else if $t==insensitive {
     $_bg: if($c!=$bg_color, mix($c, $base_color, 85%), $insensitive_bg_color);
